# advent_of_code

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  day03_heap_profiling.md  git-crypt.md
2015/: Cargo.toml  README.md
2016/: Cargo.toml  README.md
2017/: Cargo.toml  README.md
2018/: Cargo.toml  README.md
2019/: Cargo.toml  README.md
2020/: Cargo.toml  README.md
2021/: Cargo.toml  README.md  day03_heap_profiling.md
2022/: README.md
2023/: Cargo.toml  README.md
2024/: Cargo.toml
2025/: Cargo.toml
2025/input/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt
2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs  tile_grid.rs  vec_2d.rs  vec_3d.rs  vec_tile_grid.rs
aoc_2018_01/: Cargo.toml
aoc_2018_02/: Cargo.toml
aoc_2018_03/: Cargo.toml
aoc_2018_04/: Cargo.toml
aoc_2018_05/: Cargo.toml
aoc_2019_02/: Cargo.toml
aoc_2019_06/: Cargo.toml
aoc_2019_07/: Cargo.toml
aoc_2019_11/: Cargo.toml
aoc_2019_13/: Cargo.toml
aoc_2019_14/: Cargo.toml
aoc_2019_15/: Cargo.toml
aoc_2019_17/: Cargo.toml
aoc_2019_18/: Cargo.toml
aoc_2020_04/: Cargo.toml
aoc_2020_06/: Cargo.toml
aoc_2020_08/: Cargo.toml
aoc_2020_09/: Cargo.toml
aoc_2020_10/: Cargo.toml
aoc_2020_15/: Cargo.toml
aoc_2020_19/: Cargo.toml  input2.txt
aoc_2020_21/: Cargo.toml
aoc_2020_22/: Cargo.toml
aoc_2020_23/: Cargo.toml
aoc_2020_25/: Cargo.toml
input/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  (+17 more)
(+495 files in other folders)
