[package]
name = "advent_of_code_2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
line_reader = { path = "../advent_of_code/2020/line_reader" }
md5 = "0.7.0"
rayon = "1.5.1"
itertools = "0.10.1"
