[package]
name = "advent_of_code_2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
lazy_static = "1.4.0"
regex = "1.5.4"
num-format = "0.4.0"
permutohedron = "0.2.4"
intcode = { path = "intcode"}
line_reader = { path = "../advent_of_code/2020/line_reader" }
